unpackaged/main/default/objects/TaskTemplate__c/TaskTemplate__c.object-meta.xml
<CustomObject>
    <description>Template for Task Creation</description>
    <label>Task Template</label>
    <nameField>
        <displayFormat>TASK-{0000}</displayFormat>
        <label>TaskTemplate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>