unpackaged/main/default/objects/TaskTemplate__c/fields/ApplicationChecklistConfiguration__c.field-meta.xml
<CustomField>
    <fullName>ApplicationChecklistConfiguration__c</fullName>
    <label>Application Checklist Configuration</label>
    <referenceTo>ApplicationChecklistConfiguration__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>TaskTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>