unpackaged/main/default/objects/TaskTemplate__c/fields/DueIn__c.field-meta.xml
<CustomField>
    <fullName>DueIn__c</fullName>
    <description>Number of days from today</description>
    <inlineHelpText>Number of days from today</inlineHelpText>
    <label>Due In</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>